Fix select account overflow

--- a/src/components/networkAccountSelector/style.less
+++ b/src/components/networkAccountSelector/style.less
@@ -70,7 +70,7 @@
         }
     }
     .accounts {
-        position: absolute;
+        position: fixed;
         margin-top: -7px;;
         background-color: #2a2a2a;
         width: 320px;
